--- a/fe/static/app.less
+++ b/fe/static/app.less
@@ -10,3 +10,10 @@
 .width-10px {
   width: 10px;
 }
+.captcha-reload-btn {
+  height: 56px!important;
+}
+.blur {
+  backdrop-filter: blur(20px) !important;
+  background: rgba(0,0,0,.2)!important;
+}
